# yagami

./: .env.example  .gitignore  Makefile  PROJECT_PLAN.md  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
config/: cookies.txt.example
db/: init.sql
scripts/: gen-session.py  oauth-setup.py  setup.sh
services/api-gateway/: Dockerfile  LEARNING.md  go.mod
services/api-gateway/cmd/server/: main.go
services/api-gateway/internal/handlers/: handlers.go  handlers_test.go
services/api-gateway/internal/store/: store.go  store_test.go
services/downloader/: Cargo.toml  Dockerfile  LEARNING.md
services/downloader/src/: config.rs  download.rs  main.rs  models.rs
services/telegram-client/: Dockerfile  LEARNING.md  requirements.txt
services/telegram-client/telegram_client/: __init__.py  __main__.py  client.py  config.py  formatter.py  handlers.py
services/telegram-client/tests/: test_client.py  test_config.py  test_formatter.py  test_handlers.py
services/youtube-poller/: Dockerfile  LEARNING.md  mix.exs
services/youtube-poller/config/: config.exs  runtime.exs
services/youtube-poller/lib/: youtube_poller.ex
services/youtube-poller/lib/youtube_poller/: application.ex  db.ex  health_check.ex  history_worker.ex  likes_worker.ex  nats_client.ex  oauth.ex  subs_worker.ex  youtube_api.ex  ytdlp.ex
services/youtube-poller/test/: db_test.exs  oauth_test.exs  youtube_api_test.exs  ytdlp_test.exs
tests/: test_integration.py  test_workflow.py
