[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# LEARNING: Cargo.toml is Rust's package manifest (like package.json or go.mod).
# [dependencies] lists external crates (libraries) from crates.io.

[dependencies]
tokio = { version = "1", features = ["full"] }       # Async runtime (like asyncio)
async-nats = "0.35"                                    # NATS client
serde = { version = "1", features = ["derive"] }       # Serialization framework
serde_json = "1"                                       # JSON support
anyhow = "1"                                           # Easy error handling
log = "0.4"                                            # Logging facade
env_logger = "0.11"                                    # Logger implementation
futures = "0.3"                                        # StreamExt for NATS subscription

[dev-dependencies]
tempfile = "3"                                            # Temp dirs/files for tests
